# termtris

./: Cargo.toml  README.md  dist.toml  install.sh
.github/workflows/: ci.yml  release.yml
src/: main.rs
