[package]
name = "termtris"
version = "0.1.1"
edition = "2021"

[dependencies]
crossterm = "0.27"
rand = "0.8"

[package.metadata.cargo-dist]
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "aarch64-apple-darwin", "x86_64-pc-windows-msvc"]
github-release = "auto"
